added coupon functionality

--- a/templates/order_summary.html
+++ b/templates/order_summary.html
@@ -53,6 +53,12 @@
                     </td>
                 </tr>
                 {% endfor %}
+                {% if object.coupon %}
+                <tr>
+                    <td colspan='4'><b>Coupon Discount:</b></td>
+                    <td><b>- Rs.{{ object.coupon.amount }}</b></td>
+                </tr>
+                {% endif %}
                 {% if object.get_total %}
                 <tr>
                     <td colspan='4'><b>Order Total:</b></td>
