handling billing, shipping addresses

--- a/templates/base.html
+++ b/templates/base.html
@@ -64,5 +64,7 @@
     {% endblock content %}
     {% include "footer.html" %}
     {% include "scripts.html" %}
+    {% block extra_scripts %}
+    {% endblock extra_scripts %}
 </body>
 </html>
