--- a/templates/order-snippet.html
+++ b/templates/order-snippet.html
@@ -25,7 +25,7 @@
     </li>
     {% endif %}
     <li class="list-group-item d-flex justify-content-between">
-    <span>Total (USD)</span>
+    <span>Total (Rs.)</span>
     <strong>Rs.{{ order.get_total }}</strong>
     </li>
 </ul>
