--- a/templates/checkout-page.html
+++ b/templates/checkout-page.html
@@ -22,82 +22,114 @@
           <!--Card content-->
           <form method="POST" class="card-body">
             {% csrf_token %}
-
-            <div class="md-form mb-5">
-            {{ form.street_address }}
-              {% comment %} <input type="text" id="address" class="form-control" placeholder="1234 Main St"> {% endcomment %}
-              <label for="address" class="">Address</label>
-            </div>
-
-            <!--address-2-->
-            <div class="md-form mb-5">
-            {{ form.apartment_address }}
-              {% comment %} <input type="text" id="address-2" class="form-control" placeholder="Apartment or suite"> {% endcomment %}
-              <label for="address-2" class="">Address 2 (optional)</label>
-            </div>
-
-            <!--Grid row-->
-            <div class="row">
-
-              <!--Grid column-->
-              <div class="col-lg-4 col-md-12 mb-4">
-
-                <label for="country">Country</label>
-                {% comment %} <select class="custom-select d-block w-100" id="country" required>
-                  <option value="">Choose...</option>
-                  <option>United States</option>
-                </select> {% endcomment %}
-                {{ form.country }}
-                <div class="invalid-feedback">
-                  Please select a valid country.
+            <h3>Shipping Address</h3>
+            <div class="hideable_shipping_form">
+              <div class="md-form mb-5">
+                <input type="text" id="shipping_address" name="shipping_address" class="form-control" placeholder="1234 Main St">
+                <label for="shipping_address" class="">Address</label>
+              </div>
+              <div class="md-form mb-5">
+                <input type="text" id="shipping_address_2" name="shipping_address_2" class="form-control" placeholder="Apartment or suite">
+                <label for="shipping_address_2" class="">Address 2 (optional)</label>
+              </div>
+              <div class="row">
+                <div class="col-lg-4 col-md-12 mb-4">
+                  <label for="country">Country</label>
+                  {{ form.shipping_country }}
+                  <div class="invalid-feedback">
+                    Please select a valid country.
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                  <label for="state">State</label>
+                  <select class="custom-select d-block w-100" id="state" required>
+                    <option value="">Choose...</option>
+                    <option>UP</option>
+                  </select>
+                  <div class="invalid-feedback">
+                    Please provide a valid state.
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                  <label for="shipping_zip_code">Zip</label>
+                  <input type="text" class="form-control" id="shipping_zip_code" name="shipping_zip_code" placeholder="" required>
+                  <div class="invalid-feedback">
+                    Zip code required.
+                  </div>
                 </div>
 
               </div>
-              <!--Grid column-->
-
-              <!--Grid column-->
-              <div class="col-lg-4 col-md-6 mb-4">
-
-                <label for="state">State</label>
-                <select class="custom-select d-block w-100" id="state" required>
-                  <option value="">Choose...</option>
-                  <option>California</option>
-                </select>
-                <div class="invalid-feedback">
-                  Please provide a valid state.
-                </div>
-
+              <!--Grid row-->
+              <hr>
+              <div class="custom-control custom-checkbox">
+                <input type="checkbox" name="same_billing_address" class="custom-control-input" id="same_billing_address">
+                <label class="custom-control-label" for="same_billing_address">Billing address is the same as my shipping address</label>
               </div>
-              <!--Grid column-->
-
-              <!--Grid column-->
-              <div class="col-lg-4 col-md-6 mb-4">
-
-                <label for="zip">Zip</label>
-                {% comment %} <input type="text" class="form-control" id="zip" placeholder="" required> {% endcomment %}
-                {{ form.zip_code }}
-                <div class="invalid-feedback">
-                  Zip code required.
-                </div>
-
+              <div class="custom-control custom-checkbox">
+                <input type="checkbox" name="set_default_shipping" class="custom-control-input" id="set_default_shipping">
+                <label class="custom-control-label" for="set_default_shipping">Save as default shipping address</label>
               </div>
-              <!--Grid column-->
-
             </div>
-            <!--Grid row-->
-
+            {% if default_shipping_address %}
+              <div class="custom-control custom-checkbox">
+                  <input type="checkbox" name="use_default_shipping" class="custom-control-input" id="use_default_shipping">
+                  <label class="custom-control-label" for="use_default_shipping">Use default shipping address: : {{ default_shipping_address.street_address|truncatechars:10 }}</label>
+              </div>
+            {% endif %}
             <hr>
+            <h3>Billing Address</h3>
+            <div class="hideable_billing_form">
+              <div class="md-form mb-5">
+              <input type="text" id="billing_address" name="billing_address" class="form-control" placeholder="1234 Main St">
+                <label for="billing_address" class="">Address</label>
+              </div>
+              <div class="md-form mb-5">
+              <input type="text" id="billing_address_2" name="billing_address_2" class="form-control" placeholder="Apartment or suite">
+                <label for="billing_address_2" class="">Address 2 (optional)</label>
+              </div>
+              <div class="row">
+                <div class="col-lg-4 col-md-12 mb-4">
+                  <label for="country">Country</label>
+                  {{ form.billing_country }}
+                  <div class="invalid-feedback">
+                    Please select a valid country.
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                  <label for="state">State</label>
+                  <select class="custom-select d-block w-100" id="state" required>
+                    <option value="">Choose...</option>
+                    <option>UP</option>
+                  </select>
+                  <div class="invalid-feedback">
+                    Please provide a valid state.
+                  </div>
+                </div>
+                <div class="col-lg-4 col-md-6 mb-4">
+                  <label for="billing_zip_code">Zip</label>
+                  <input type="text" class="form-control" id="billing_zip_code" name="billing_zip_code" placeholder="" required>
+                  <div class="invalid-feedback">
+                    Zip code required.
+                  </div>
+                </div>
+              </div>
+              <!--Grid row-->
 
-            <div class="custom-control custom-checkbox">
-              <input {% if form.same_billing_address.value %} checked {% endif %} type="checkbox" name="same_billing_address" class="custom-control-input" id="same-address">
-              <label class="custom-control-label" for="same-address">Shipping address is the same as my billing address</label>
+              <hr>
+              <div class="custom-control custom-checkbox">
+                <input type="checkbox" name="set_default_billing" class="custom-control-input" id="set_default_billing">
+                <label class="custom-control-label" for="set_default_billing">Save as default billing address</label>
+              </div>
             </div>
-            <div class="custom-control custom-checkbox">
-              <input {% if form.save_info.value %} checked {% endif %} type="checkbox" name="save_info" class="custom-control-input" id="save-info">
-              <label class="custom-control-label" for="save-info">Save this information for next time</label>
-            </div>
-
+              {% if default_billing_address %}
+              <div class="custom-control custom-checkbox">
+                  <input type="checkbox" name="use_default_billing" class="custom-control-input" id="use_default_billing">
+                  <label class="custom-control-label" for="use_default_billing">Use default billing address: {{ default_billing_address.street_address|truncatechars:10 }}</label>
+              </div>
+              {% endif %}
+            
             <hr>
+            <h3>Payment Option</h3>
 
             <div class="d-block my-3">
             {% for value, name in form.fields.payment_option.choices %}
@@ -127,7 +159,30 @@
 
   </div>
 </main>
-<!--Main layout-->
-
-
 {% endblock %}
+
+{% block extra_scripts %}
+<script>
+  var hideable_shipping_form = $('.hideable_shipping_form');
+  var hideable_billing_form = $('.hideable_billing_form');
+
+  var use_default_shipping = document.querySelector('input[name=use_default_shipping]')
+  var use_default_billing = document.querySelector('input[name=use_default_billing]')
+
+  use_default_shipping.addEventListener('change', function(){
+    if (this.checked){
+      hideable_shipping_form.hide();
+    } else {
+      hideable_shipping_form.show();
+    }
+  })
+
+  use_default_billing.addEventListener('change', function(){
+    if (this.checked){
+      hideable_billing_form.hide();
+    } else {
+      hideable_billing_form.show();
+    }
+  })
+</script>
+{% endblock extra_scripts %}
