changed images and footer

--- a/templates/home-page.html
+++ b/templates/home-page.html
@@ -47,7 +47,7 @@
 
       <!--Second slide-->
       <div class="carousel-item">
-        <div class="view" style="background-image: url('media/shop_22_IxNedJx.jpg'); background-repeat: no-repeat; background-size: cover;">
+        <div class="view" style="background-image: url('media/shop_5.png'); background-repeat: no-repeat; background-size: cover;">
 
           <!-- Mask & flexbox options-->
           <div class="mask rgba-black-strong d-flex justify-content-center align-items-center">
@@ -77,7 +77,7 @@
 
       <!--Third slide-->
       <div class="carousel-item">
-        <div class="view" style="background-image: url('media/shop_3_eTnySTL.jpg'); background-repeat: no-repeat; background-size: cover;">
+        <div class="view" style="background-image: url('media/shop_6.jpg'); background-repeat: no-repeat; background-size: cover;">
 
           <!-- Mask & flexbox options-->
           <div class="mask rgba-black-strong d-flex justify-content-center align-items-center">
